This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Failed test_new_curses_panel in test_curses
Type: Stage: resolved
Components: Versions: Python 3.10
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: koubaa, serhiy.storchaka, vstinner
Priority: normal Keywords: patch

Created on 2020-12-20 21:10 by serhiy.storchaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 23948 merged vstinner, 2020-12-26 00:38
PR 21986 koubaa, 2020-12-26 00:42
Messages (3)
msg383453 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2020-12-20 21:10
======================================================================
FAIL: test_new_curses_panel (test.test_curses.TestCurses)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/serhiy/py/cpython/Lib/test/test_curses.py", line 425, in test_new_curses_panel
    self.assertRaises(TypeError, type(panel))
AssertionError: TypeError not raised by panel

----------------------------------------------------------------------

The regression was introduced in 1baf030a902392fe92d934ed0fb6a385cf7d8869 (issue1635741). It can lead to crash because creation of non-initialized object is allowed now. See issue23815 for details.
msg383784 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2020-12-26 00:40
I can reproduce the issue with the command:

./python -m test -u all test_curses

I wrote PR 23948 to fix the regression.

Note: "./python -m test test_curses" doesn't fail since the test is skipped.
msg383788 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2020-12-26 01:18
New changeset 993e88cf08994f7c1e0f9f62fda4ed32634ee2ad by Victor Stinner in branch 'master':
bpo-42694: Prevent creating _curses_panel.panel (GH-23948)
https://github.com/python/cpython/commit/993e88cf08994f7c1e0f9f62fda4ed32634ee2ad
History
Date User Action Args
2022-04-11 14:59:39adminsetgithub: 86860
2020-12-26 01:18:28vstinnersetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2020-12-26 01:18:04vstinnersetmessages: + msg383788
2020-12-26 00:42:59koubaasetnosy: + koubaa
pull_requests: + pull_request22797
2020-12-26 00:40:21vstinnersetmessages: + msg383784
2020-12-26 00:38:18vstinnersetkeywords: + patch
stage: patch review
pull_requests: + pull_request22796
2020-12-20 21:10:00serhiy.storchakacreate